# Saber-OLD

./: CHANGELOG.md  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LLVMBuild.cmake  README.md  a.out  cli.ll  cmake_install.cmake  compile_commands.json  main.sb  saber.cabal  saber.db  test.c  test2.c
app/: Main.hs
benchmarks/: cmake_install.cmake
docs/: cmake_install.cmake
examples/: cmake_install.cmake
lib/: cmake_install.cmake  libLLVMAArch64AsmParser.so.9  libLLVMAArch64CodeGen.so.9  libLLVMAArch64Desc.so.9  libLLVMAArch64Disassembler.so.9  libLLVMAArch64Info.so.9  libLLVMAArch64Utils.so.9  libLLVMAMDGPUAsmParser.so.9  libLLVMAMDGPUDesc.so.9  libLLVMAMDGPUDisassembler.so.9  libLLVMAMDGPUInfo.so.9  libLLVMAMDGPUUtils.so.9  libLLVMARMAsmParser.so.9  libLLVMARMCodeGen.so.9  libLLVMARMDesc.so.9  libLLVMARMDisassembler.so.9  libLLVMARMInfo.so.9  libLLVMARMUtils.so.9  libLLVMAggressiveInstCombine.so.9  libLLVMAsmParser.so.9  libLLVMAsmPrinter.so.9  libLLVMBPFAsmParser.so.9  libLLVMBPFCodeGen.so.9  libLLVMBPFDesc.so.9  libLLVMBPFDisassembler.so.9  libLLVMBPFInfo.so.9  libLLVMBinaryFormat.so.9  libLLVMBitReader.so.9  libLLVMBitWriter.so.9  libLLVMBitstreamReader.so.9  (+112 more)
saber/: a.out  cli.ll  main.sb  prompt.txt  saber.cabal  saber.db
saber/app/: Main.hs
saber/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
saber/dist-newstyle/tmp/environment.-332206/: .ghc.environment.x86_64-linux-8.8.4
saber/old_src/: Gen.hs  Main.hs  Parser.hs  Typecheck.hs
saber/src/: ANF.hs  AST.hs  Desugar.hs  Grammar.hs  Imp.hs  MyLLVM.hs  Parser.hs  Specialize.hs  Typecheck.hs
(+276 files in other folders)
